--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'junit', name: 'junit', version: '4.12'
     compile fileTree(dir: '/src/main/lib', includes: ['*.jar'])
 }
