--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,5 @@ repositories {
 
 dependencies {
     implementation group: 'junit', name: 'junit', version: '4.12'
-    compile fileTree(dir: '/src/main/lib', includes: ['*.jar'])
+    implementation fileTree(dir: '/src/main/lib', includes: ['*.jar'])
 }
