--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,14 @@ dependencies {
     implementation group: 'junit', name: 'junit', version: '4.12'
     implementation fileTree(dir: '/src/main/lib', includes: ['*.jar'])
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'TechInterviewHelper'
+    }
+    from {
+        configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+}
