--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     implementation group: 'junit', name: 'junit', version: '4.12'
+    runtimeOnly 'com.h2database:h2'
     implementation fileTree(dir: '/src/main/lib', includes: ['*.jar'])
 }
 
